--- a/index.html
+++ b/index.html
@@ -36,10 +36,31 @@
     
     <h2>Projects</h2>
     <ul>
-        <li><b>Plasma Discord Bot.</b> Backend application that interacted with the Discord REST API and gateway to monitor the activity of users in group chats. Reached a total of <i>97,000,000 users</i> and <i>308,000 group chats</i>.</li>
-        <li><b>Studying Tool.</b> Full stack web application enabling students, teachers and parents to manage digital flashcards in a virtual classroom. Achieved <i>69/70 marks</i> for my A-level coursework.</li>
-        <li><b>FTP Client & Server.</b> Applications, which follow the FTP RFC959 standard, allowing users to manage files on their server.</li>
-        <li><b>Distributed Key-Value Store.</b> Read-focused, scalable and fault-tolerant distributed store, utilising RocksDB as the storage engine.</li>
-        <li><b>Airline Database Application.</b> Cli to interact with a database for an airline company.</li>
+        <li>
+            <b>Plasma Discord Bot.</b> 
+            Backend application that interacted with the Discord REST API and gateway to monitor the activity of users in group chats.
+            <ul>
+                <li>Reached a total of <i>97,000,000 users</i> and <i>308,000 group chats</i>.</li>
+            </ul>
+        </li>
+        <li>
+            <b>Studying Tool.</b> 
+            Full stack web application enabling students, teachers and parents to manage digital flashcards in a virtual classroom. 
+            <ul>
+                <li>Achieved <i>69/70 marks</i> as my A-Level coursework.</li>
+            </ul>
+        </li>
+        <li>
+            <b>FTP Client & Server.</b> 
+            Applications, which follow the FTP RFC959 standard, allowing users to manage files on their server.
+        </li>
+        <li>
+            <b>Distributed Key-Value Store.</b> 
+            Read-focused, scalable and fault-tolerant distributed store, utilising RocksDB as the storage engine.
+        </li>
+        <li>
+            <b>Airline Database Application.</b> 
+            Cli to interact with a database for an airline company.
+        </li>
     </ul>
 </body>
