--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <b>Studying Tool.</b> 
             Full stack web application enabling students, teachers and parents to manage digital flashcards in a virtual classroom. 
             <ul>
-                <li>Achieved <i>69/70 marks</i> as my A-Level coursework.</li>
+                <li>Achieved <i>69 out of 70 marks</i> as my A-Level coursework.</li>
             </ul>
         </li>
         <li>
