--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <title>Dylan Roskilly</title>
         <meta name="description" content="Dylan Roskilly's personal website">
         
-        <link rel="icon" type="image/x-icon" href="cogs.png">
-
         <style type="text/css">
             body {
                 font-family: Arial, Helvetica, sans-serif;
@@ -67,7 +65,7 @@
         <ul>
             <li>
                 <b>Mastermind AI Solver.</b> 
-                Donald Knuth's Five Guess algorithm, leveraging safe multi-processing.
+                Donald Knuth's Five Guess Algorithm and Swaszek's (1999-2000) algorithm, both leveraging safe multi-processing.
                 <!-- <ul>
                     <li>Achieved <i>x out of y marks</i>.</li>
                 </ul> -->
