--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
             <li>
                 <b>Mastermind AI Solver.</b> 
-                Donald Knuth's Five Guess Algorithm and Swaszek's (1999-2000) algorithm, both leveraging safe multi-processing.
+                Donald Knuth's Five Guess algorithm and Swaszek's (1999-2000) algorithm, both leveraging safe multi-processing.
                 <!-- <ul>
                     <li>Achieved <i>x out of y marks</i>.</li>
                 </ul> -->
