add github repos and cw marks

--- a/index.html
+++ b/index.html
@@ -64,25 +64,20 @@
         <h2>University Coursework</h2>
         <ul>
             <li>
-                <b>Mastermind AI Solver.</b> 
-                Donald Knuth's Five Guess algorithm and Swaszek's (1999-2000) algorithm, both leveraging safe multi-processing.
-                <!-- <ul>
-                    <li>Achieved <i>x out of y marks</i>.</li>
-                </ul> -->
+                <b><a href="https://github.com/DylanRoskilly/mastermind">Mastermind AI Solver.</a></b> 
+                Donald Knuth's Five Guess algorithm and Swaszek's (1999-2000) algorithm, both leveraging safe multi-processing. 
+                Awarded 100%.
             </li>
             <li>
-                <b>DLX Sudoku Solver.</b> 
-                Rapid sudoku solver using Algorithm X and Dancing Links.
-                <!-- <ul>
-                    <li>Achieved <i>x out of y marks</i>.</li>
-                </ul> -->
+                <b><a href="https://github.com/DylanRoskilly/sudoku-solver">DLX Sudoku Solver.</a></b> 
+                Rapid sudoku solver using Algorithm X and Dancing Links. 
+                Also wrote a report about the implementation.
+                Awarded 96%.
             </li>
             <li>
-                <b>Airline Database Application.</b> 
-                Cli to interact with an SQL database for an airline company.
-                <!-- <ul>
-                    <li>Achieved <i>x out of y marks</i>.</li>
-                </ul> -->
+                <b><a href="https://github.com/DylanRoskilly/airline-db">Airline Database Application.</a></b> 
+                Cli to interact with an SQL database for an airline company. 
+                Awarded 83%.
             </li>
         </ul>
     </body>
