re-word airline

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             </li>
             <li>
                 <b><a href="https://github.com/DylanRoskilly/airline-db">Airline Database Application.</a></b> 
-                Cli to interact with an SQL database for an airline company. 
+                CLI to interact with an SQL database for an airline company, providing CRUD operations and complex summary statistics. 
+                Object oriented approach.
                 Awarded 83%.
             </li>
         </ul>
