--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
 
     <body>
         <h1>Dylan Roskilly</h1>
-        <p>Studying computer science at the University of Bath. Aspiring software engineer.</p>
-        
-        <h2>Socials</h2>
-        <ul>
-            <li><a href="https://github.com/DylanRoskilly">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/dylanroskilly">LinkedIn</a></li> 
-            <li><a href="mailto:droskilly00@gmail.com">Email Me</a></li> 
-        </ul>
+        <p>
+            Studying computer science at the University of Bath. Aspiring software engineer. 
+            See my <a href="https://github.com/DylanRoskilly">GitHub</a>, <a href="https://www.linkedin.com/in/dylanroskilly">LinkedIn</a>, or <a href="mailto:droskilly00@gmail.com">email me</a>.
+        </p>
         
         <h2>Projects</h2>
         <ul>
